# Autonomous-Career-Agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: API_CONTRACT.md  ARCHITECTURE.md  CLASS_DIAGRAM.md  CODING_CONVENTION.md  SETUP.md
docs/superpowers/specs/: 2026-06-22-job-cv-agentic-platform-design.md  2026-07-18-cv-editor-pdf-latex-design.md  2026-07-24-libs-contract-alignment.md
frontend/: Dockerfile  README.md  package.json
frontend/app/: layout.tsx  page.tsx
infra/: README.md
infra/init-db/: 01_schema.sql
libs/: README.md
libs/common/: config.py  jwt.py  logging.py
libs/llm/: adapter.py  prompts.py
libs/messaging/: rabbitmq.py
libs/messaging/tests/: test_rabbitmq.py
libs/schemas/: models.py
libs/tests/: test_adapter.py  test_config.py  test_jwt.py  test_models.py  test_rabbitmq.py
services/api-gateway/: Dockerfile  README.md
services/api-gateway/app/: main.py
services/ats-agent-service/: Dockerfile  README.md  requirements.txt
services/ats-agent-service/app/: main.py
services/auth-service/: Dockerfile  README.md  requirements.txt
services/auth-service/app/: main.py
services/cv-agent-service/: Dockerfile  README.md  requirements.txt
services/cv-agent-service/app/: main.py
services/profile-service/: Dockerfile  README.md  requirements.txt
services/profile-service/app/: main.py
services/scraper-service/: Dockerfile  README.md  requirements.txt
services/scraper-service/app/: main.py
