[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "career-agent-libs"
version = "0.1.0"
description = "Shared libraries (config, messaging, schemas, LLM) for the Autonomous Career Agent platform"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "pydantic-settings>=2",
    "pika>=1.3",
    "anthropic>=0.39",
    "openai>=1.40",
    "python-jose[cryptography]>=3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "black==24.4.2",
    "ruff==0.4.9",
]

# Only the shared libs package is installed; each service keeps its own app/ tree.
[tool.setuptools.packages.find]
include = ["libs*"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# pycodestyle errors/warnings, pyflakes, and isort (import sort).
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["libs/tests"]
